# supapasskeys-rust-poc

./: .gitignore  Cargo.toml  Dockerfile  README.md  compose.yml
.github/workflows/: ci.yml  publish.yml
migration/: Cargo.toml
migration/src/: lib.rs  m20240127_164136_create_schema_supapasskeys.rs  m20240127_165001_create_table_passkeys.rs  m20240127_190631_create_table_registrations.rs  m20240127_191420_create_table_authentications.rs  m20240127_213626_create_trigger_update_timestamp.rs
src/: app.rs  config.rs  db.rs  lib.rs
src/api/passkeys/: authentications.rs  index.rs  mod.rs  registrations.rs
src/models/: mod.rs  registration.rs
src/models/entities/: authentications.rs  mod.rs  passkeys.rs  prelude.rs  registrations.rs
