[package]
name = "supapasskeys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["migration"]

[dependencies]
axum = { version = "0.7.4", features = ["http2"] }
dotenvy = "0.15.7"
sea-orm = { version = "0.12.12", features = ["debug-print", "runtime-tokio-rustls", "sqlx-postgres", "with-json", "with-uuid"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.112"
tokio = { version = "1.35.1", features = ["full"] }
uuid = { version = "1.7.0", features = ["v4"] }
webauthn-rs = { version = "0.4.8", features = ["danger-allow-state-serialisation"] }
